--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+  
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +31,83 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="9" class="row time-block">
+        <div class="col-md-1 hour">
+          9AM
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="10" class="row time-block">
+        <div class="col-md-1 hour">
+          10AM
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="11" class="row time-block">
+        <div class="col-md-1 hour">
+          11am
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="12" class="row time-block">
+        <div class="col-md-1 hour">
+          12pm
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="1" class="row time-block">
+        <div class="col-md-1 hour">
+          1pm
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="2" class="row time-block">
+        <div class="col-md-1 hour">
+          2pm
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="3" class="row time-block">
+        <div class="col-md-1 hour">
+          3pm
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="4" class="row time-block">
+        <div class="col-md-1 hour">
+          4pm
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="5" class="row time-block">
+        <div class="col-md-1 hour">
+          5pm
+        </div>
+        <textarea class="col-md-10 textValue">
+        </textarea>
+        <button class="btn save-button col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      
     </div>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="/HomeWork/scheduler-api/script.js"></script>
   </body>
 </html>
