--- a/index.html
+++ b/index.html
@@ -115,6 +115,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="/HomeWork/scheduler-api/script.js"></script>
+    <script src="/scheduler-api/script.js"></script>
   </body>
 </html>
